# essencescript

./: .editorconfig  .gitignore  README.md  pdm.toml  pyproject.toml
src/essencescript/: enums.py  ess_api.py  essence_models.py  kernel.py  main.py  model_spem.py  openup_mappings.py  rup_mappings.py  tasks.txt
src/resources/: converted.json
